@@ -1,0 +1,47 @@
+# Makefile for e1000
+#
+# Copyright (C) 2006 Richard Kojedzinszky <krichy@tvnetwork.hu>
+# All rights reserved.
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+
+PKG := e1000
+SRC_FILENAME = e1000-7.3.15.tar.gz
+EXTRACTED_DIR = e1000-7.3.15
+DOWNLOAD_SITES = \
+	http://downloadmirror.intel.com/df-support/9180/eng/ \
+	$(CFLINUX_PACKAGES)
+
+# include the common package targets 
+include $(TOP_DIR)/packages.mk 
+
+configure: patch $(CONFIGURED_STAMP)
+
+$(CONFIGURED_STAMP):
+	touch $(CONFIGURED_STAMP)
+
+clean:
+	rm -f $(BUILT_STAMP)
+	rm -f $(CONFIGURED_STAMP)
+
+build: configure $(BUILT_STAMP)
+
+$(BUILT_STAMP):
+	touch $(BUILT_STAMP)
+
+install: build
+
+.PHONY: configure clean build install
+
